# hutopia

./: .gitignore  README.md
hutopia-book/: book.toml
hutopia-book/src/: SUMMARY.md  servers.md  standards.md  welcome.md
hutopia-database-relay/: Cargo.toml
hutopia-database-relay/migrations/2024-02-17-203527_data/: down.sql  up.sql
hutopia-database-relay/migrations/2024-02-22-175532_data/: down.sql  up.sql
hutopia-database-relay/src/: db.rs  lib.rs  models.rs  schema.rs
hutopia-database-relay/src/ops/: mod.rs  user_ops.rs  user_tokens_ops.rs
hutopia-database-space/: Cargo.toml
hutopia-database-space/src/: db.rs
hutopia-frontend/: bun.lockb  package.json  vite.config.ts
hutopia-frontend/src/components/: LoginButton.vue
hutopia-frontend/src/utils/: post.js
hutopia-frontend/src/views/: HomeView.vue  RegisterView.vue
hutopia-plugin-client/: Cargo.toml
hutopia-plugin-client/src/: lib.rs
hutopia-plugin-core/: Cargo.toml
hutopia-plugin-server/: Cargo.toml
hutopia-plugin-server/src/: config.rs  lib.rs  plugins.rs  utils.rs
hutopia-relay-space-protocol/: Cargo.toml
hutopia-server-relay/: Cargo.toml  build.rs  relay.toml
hutopia-server-relay/src/: app.rs  config.rs  init.rs  lib.rs  main.rs  routes.rs  state.rs
hutopia-server-relay/src/auth/: g_auth.rs  mod.rs  utils.rs
hutopia-server-space/: Cargo.toml  hutopia.toml  space.toml
hutopia-server-space/space/: index.html
hutopia-server-space/src/: config.rs  init.rs  lib_ext.rs  main.rs  plugins.rs  state.rs  watcher.rs
hutopia-utils/: Cargo.toml
hutopia-utils/src/: crypto.rs  lib.rs  uuid_protocol.rs
widgets/chat/: build.sh  example.html
widgets/chat/chat-plugin-client/: Cargo.toml
widgets/chat/chat-plugin-client/src/: lib.rs
widgets/chat/chat-plugin-client/website/: package-lock.json  package.json  webpack.config.js
widgets/chat/chat-plugin-client/website/www/: index.js
widgets/chat/chat-plugin-database/: Cargo.toml
widgets/chat/chat-plugin-database/migrations/2024-01-04-003513_data/: up.sql
widgets/chat/chat-plugin-database/migrations/2024-02-22-192203_data/: up.sql
widgets/chat/chat-plugin-database/src/: db.rs  models.rs  schema.rs
widgets/chat/chat-plugin-database/src/ops/: message_ops.rs  mod.rs
widgets/chat/chat-plugin-protocol/: Cargo.toml
widgets/chat/chat-plugin-protocol/src/: lib.rs  message.rs
widgets/chat/chat-plugin-server/: Cargo.toml  chat.toml
widgets/chat/chat-plugin-server/src/: actors_messages.rs  chat.rs  config.rs  lib.rs  websocket.rs
widgets/console/: build.sh
widgets/console/console-frontend/: index.js
widgets/console/console-plugin-server/: Cargo.toml  console.toml
widgets/console/console-plugin-server/src/: config.rs  lib.rs
widgets/example/: build.sh  example.html
widgets/example/example-plugin-client/: Cargo.toml
widgets/example/example-plugin-client/src/: lib.rs
widgets/example/example-plugin-protocol/: Cargo.toml
widgets/example/example-plugin-server/: Cargo.toml
widgets/example/example-plugin-server/src/: actors_messages.rs  chat.rs  lib.rs  websocket.rs
