[package]
name = "hutopia-plugin-server"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.20"
actix-web = "4.4.1"
serde = "1.0.195"
serde_json = "1.0.114"
libloading = "0.8.1"
hutopia-utils = { path = "../hutopia-utils" }
reqwest = { version = "0.11.24", features = ["json", "blocking"] }

[build-dependencies]
rustc_version = "0.4.0"
