[package]
name = "hutopia-server-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = { version = "0.6.5" }
actix-web = { version = "4.4.1" }
http = { version = "0.2", optional = true }
rust-embed = { version = "8.0.0", features = ["include-exclude", "interpolate-folder-path"] }
hutopia-database-relay = { path = "../hutopia-database-relay" }
hutopia-utils = { path = "../hutopia-utils" }
reqwest = { version = "0.11", features = ["blocking"] }
serde = "1.0.196"
log = "0.4.20"
env_logger = "0.11.1"
mime_guess = "2.0.4"
