[package]
name = "chat-plugin-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
custom-elements = { git = "https://github.com/gbj/custom-elements/" }
hutopia-plugin-client = { path = "../../../hutopia-plugin-client" }
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Document",
  "HtmlElement",
  "Node",
  "Text",
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
  "HtmlInputElement",
]
