[package]
name = "chat-plugin-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
custom-elements = { git = "https://github.com/gbj/custom-elements/" }
hutopia-plugin-client = { path = "../../../hutopia-plugin-client" }
chat-plugin-protocol = { path = "../chat-plugin-protocol" }
wasm-bindgen = "0.2"
uuid = { version = "1.6", features = ["v4", "js"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Document",
  "HtmlElement",
  "Element",
  "Node",
  "Text",
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
  "HtmlInputElement",
]
