[package]
name = "chat-plugin-server"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
hutopia-plugin-server = { path = "../../../hutopia-plugin-server" }
chat-plugin-protocol = { path = "../chat-plugin-protocol" }
log = "0.4.20"
rust-embed = "8.2.0"
actix = "0.13.1"
actix-web = "4.4.1"
actix-web-actors = "4.2.0"
uuid = { version = "1.6.1", features = ["v4"] }
actix-rt = "2.9.0"
