[package]
name = "console-plugin-server"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
hutopia-plugin-server = { path = "../../../hutopia-plugin-server" }
hutopia-utils = { path = "../../../hutopia-utils" }
rust-embed = "8.2.0"
actix = "0.13.1"
actix-web = "4.4.1"
actix-web-actors = "4.2.0"
actix-rt = "2.9.0"
serde = { version = "1.0.195",  features = ["derive"] }
reqwest = { version = "0.11.24", features = ["json", "blocking"] }
serde_json = "1.0.114"
mime_guess = "2.0.4"